# postui

./: Cargo.toml  README.md
examples/: get_html_response.toml  get_request.toml  post_request.toml
src/: main.rs
src/config/: mod.rs
src/request/: executor.rs  import.rs  lib.rs  mod.rs  model.rs  parser.rs  url.rs
src/response/: model.rs  parser.rs
src/ui/: area.rs  collection.rs  mod.rs  request_area.rs  response_area.rs  tabs.rs  tui.rs
