[package]
name = "postui"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
directories = "6.0.0"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
color-eyre = "0.6.3"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.8.20"
